--- a/uppskriftir/src/components/layout/layout.styles.css
+++ b/uppskriftir/src/components/layout/layout.styles.css
@@ -1,3 +1,43 @@
 body {
+    display: grid;
     background-color: indigo;
+    margin-top: 0px;
+    height: 100%;
+}
+
+.layout {
+    top: 0;
+    
+}
+
+header {
+    background-color: blueviolet;
+    color: cornflowerblue;
+    
+    margin-top: 0px;
+
+}
+
+footer {
+    
+    
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 0px;
+}
+
+.random_joke {
+    display: flex;
+    position: sticky;
+    justify-content: flex-end;
+    align-content: flex-end;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.next_btn {
+    color: deepskyblue;
 }
