--- a/uppskriftir/src/index.css
+++ b/uppskriftir/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #d2abf1;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f773e1;
 }
 
 body {
