--- a/uppskriftir/src/components/layout/layout.styles.css
+++ b/uppskriftir/src/components/layout/layout.styles.css
@@ -3,13 +3,14 @@ body {
     background-color: indigo;
     margin-top: 0px;
     height: 100%;
+    margin-bottom: 0px;
 }
 
 .layout {
     top: 0;
     /* display: flex;
     flex-direction: column; */
-    
+    bottom: 0;
     
 }
 
@@ -23,7 +24,10 @@ header {
 
 footer {
     background-color: rgb(58, 4, 109);
-    
+    bottom: 0;
+    position: fixed;
+    justify-self: center;
+    width: 100%;
 }
 
 nav {
@@ -35,7 +39,7 @@ nav {
 .random_joke {
     display: flex;
     flex-direction: column;
-    position: absolute;
+    position: static;
     justify-self: flex-end;
     align-self: flex-start;
     margin-bottom: 10px;
@@ -61,4 +65,10 @@ nav {
     background-color: rgb(124, 30, 190);
     border-radius: 100px;
     margin: 1rem;
+}
+
+.byLetter {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
 }
