bæta við síður og eitthvað

--- a/uppskriftir/src/components/layout/layout.styles.css
+++ b/uppskriftir/src/components/layout/layout.styles.css
@@ -72,3 +72,9 @@ nav {
     justify-content: center;
     gap: 1rem;
 }
+
+.btnLetter {
+    background-color: rgb(86, 20, 139);
+    color:rgb(159, 128, 189);
+    border-radius: 50%;
+}
