--- a/uppskriftir/src/components/layout/layout.styles.css
+++ b/uppskriftir/src/components/layout/layout.styles.css
@@ -26,7 +26,9 @@ footer {
   position: fixed;
   display: flex;
   justify-self: center;
+  align-items: center;
   width: 100%;
+  height: 2rem;
   justify-content: center;
   gap: 2rem;
 }
@@ -50,15 +52,18 @@ nav {
 }
 
 #joke_container {
-    border: 1rem rgb(155, 134, 248) solid;
-    border-radius: 4rem;
-    padding: 0.9rem;
+    border: 64px rgb(155, 134, 248) solid ;
+    border-image: url("framecool.png") 64 round;
+    
 }
 
 #joke_title {
-    font-size: 30px;
-    margin-bottom: -7%;
+    font-size: 60px;
+    margin-bottom: -10%;
+    color: rgb(135, 146, 250);
+    text-shadow: 3px 3px 2px midnightblue, -3px -3px 2px midnightblue;
     z-index: 5;
+    font-family: "Are You Serious";
 }
 
 .uppskrift {
@@ -131,7 +136,8 @@ nav {
   left: 5%;
   position: fixed;
   transform: rotate(-5deg);
-  font-size: 25px;
+  font-size: 80px;
+  font-family: "Are You Serious";
 }
 
 #about {
@@ -144,5 +150,21 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  justify-self: center;
+  align-items: center;
   margin: 3rem;
+  position: absolute;
+  top: 10%;
+
+}
+
+#heim-main {
+    display: flex;
+    justify-content: center;
+    justify-self: center;
+    align-items: center;
+    align-self: center;
+    position:absolute;
+    top:13%;
+    
 }
