--- a/uppskriftir/src/components/Card/card.styles.module.css
+++ b/uppskriftir/src/components/Card/card.styles.module.css
@@ -1,16 +1,34 @@
 /* body {
-    background-color: chartreuse;
+    display: flex;
+    align-self: center;
+    justify-content: center;
 } */
 
 .classes {
   background-color: beige;
 }
 
-.recipe_card_link {
+.recipe_card {
     background-color: yellow;
 }
 
 .container {
-    color:black;
+    color:rgb(187, 212, 250);
 }
 
+.instructions {
+    max-width: 600px;
+    display: flex;
+    justify-self: center;
+text-align:justify;    
+padding-bottom: 3rem;
+}
+
+h3 {
+    padding-top: 1rem;
+}
+
+.cardMealthumb{
+    border-radius: 15px;
+    box-shadow: 3px 3px 5px black;
+}
