--- a/uppskriftir/src/components/layout/layout.styles.css
+++ b/uppskriftir/src/components/layout/layout.styles.css
@@ -1,9 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   display: grid;
   background-color: indigo;
   margin-top: 0px;
   height: 100%;
   margin-bottom: 0px;
+  min-width: 390px;
 }
 
 .layout {
@@ -44,6 +49,8 @@ nav {
 #subnav {
   background-color: rgb(81, 21, 160);
   margin-bottom: 5px;
+  display: flex;
+  max-width: auto;
 }
 
 a:any-link {
@@ -61,6 +68,7 @@ a:any-link {
 
   width: 300px;
   isolation: isolate;
+  max-width: 1000px;
 }
 
 .random_joke #joke_cont {
@@ -88,17 +96,30 @@ a:any-link {
 .uppskrift {
   display: flex;
   flex-direction: column;
-  margin-left: 20rem;
-  margin-right: 15rem;
+  margin: 0 auto;
   padding: 1rem;
   gap: 1rem;
+  width: 50%;
+}
+
+.mealTitle {
+  text-decoration: underline;
+  font-size: 1.5rem;
+  font-weight: bold;
+  word-break:break-all;
+    overflow-wrap: break-word;
 }
 
 .categories {
+  
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto;
-  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  
+  gap: 1.5rem;
+  margin: 1rem auto 1rem;
+  padding: 1rem;
+  max-width: 1200px;
+  
 }
 
 .meal_buttons {
@@ -146,15 +167,19 @@ a:any-link {
 }
 
 .mealImg {
-  width: 300px;
+  
   border-radius: 25px;
   box-shadow: 5px 5px 5px rgb(39, 1, 65);
   gap: 1rem;
+    width: 100%;
+  height: auto;
+  display: block;
 }
 
 .mealImg img {
   padding: 1rem;
   gap: 1rem;
+  
 }
 
 .mealImg:hover {
@@ -162,17 +187,10 @@ a:any-link {
   box-shadow: 0px 0px 20px cornflowerblue;
 }
 
-#search {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  gap: 1rem;
-}
-
 #vesenTitle {
   display: flex;
   flex-flow: column;
-  justify-content: flex-start;
+
   top: 10%;
   left: 5%;
   position: fixed;
@@ -180,7 +198,7 @@ a:any-link {
   font-size: 90px;
   font-family: "Are You Serious";
   color: rgb(123, 198, 241);
-   background-image: linear-gradient(
+  background-image: linear-gradient(
     to bottom,
     rgb(123, 198, 241),
     rgb(123, 198, 241),
@@ -191,9 +209,10 @@ a:any-link {
   color: transparent;
   -webkit-background-clip: text;
   display: inline-block;
-    text-shadow: 4px 4px 3px rgba(47, 0, 100, 0.801), -1px -1px 1px rgba(230, 230, 250, 0.527);
+  text-shadow: 4px 4px 3px rgba(47, 0, 100, 0.801),
+    -1px -1px 1px rgba(230, 230, 250, 0.527);
 }
-#vesenTitle:hover{
+#vesenTitle:hover {
   text-shadow: 0px 0px 10px rgb(209, 174, 255);
 }
 
@@ -227,24 +246,27 @@ a:any-link {
 
 #search {
   padding: 1rem;
+   display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .searchResults {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto;
-  gap: 1rem;
-  margin-left: 20rem;
-  margin-right: 20rem;
-  margin-bottom: 3rem;
-  margin-top: 1rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 1.5rem;
+  margin: 1rem auto 1rem;
+  padding: 1rem;
+  max-width: 1500px;
 }
 
 .searchResults img {
   border-radius: 25px;
   box-shadow: 5px 5px 3px rgb(39, 1, 65);
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 #banancat {
@@ -271,4 +293,97 @@ a:any-link {
   color: transparent;
   -webkit-background-clip: text;
   display: inline-block;
+}
+
+@media (max-width: 844px) {
+  body {
+    font-size: 0.8rem;
+  }
+
+  nav {
+    flex-wrap: wrap;
+    justify-content: stretch;
+    gap: 1rem;
+  margin-top: 1rem;  
+  margin-left: 0.5rem;  
+  }
+
+  #subnav {
+    margin-top: 0;
+  }
+
+  #heim-main {
+    position: static;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    max-width: 50vw;
+  }
+
+  #heim-main img {
+    width: 70%;
+    height: auto;
+  }
+
+  .uppskrift {
+    margin: 0;
+    
+  }
+
+  .categories,
+  .searchResults {
+    grid-template-columns: 1fr;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .searchResults img {
+    width: 50%;
+  }
+
+  .mealImg {
+    width: 50%;
+    align-items: center;
+  }
+
+  .btnLetter {
+    width: 44px;
+    height: 44px;
+  }
+
+  #vesenTitle {
+    font-size: 40px;
+    position: static;
+    text-align: center;
+    padding-bottom: 2rem;
+  }
+
+  .random_joke {
+    display: none;
+  }
+
+  .about_all {
+   position: static;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  #about {
+    width: 100%;
+  }
+
+  .mealTitle {
+    font-size: 1rem; 
+  }
+
+  .uppskrift h1 {
+    font-size:1.8rem;
+    
+    
+    
+  }
 }
